k8s/30-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fittrack-api
  namespace: fittrack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: fittrack.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fittrack-api
                port:
                  number: 80
